@@ -1,3 +1,8 @@
+2012-06-11  Pedro Alves  <palves@redhat.com>
+
+	* serial.c (do_serial_close): Remove early return when SCB is
+	null.
+
 2012-06-11  Tom Tromey  <tromey@redhat.com>
 
 	* dwarf2read.c (dw2_get_file_names_reader): Ignore partial units.
